--- a/index.html
+++ b/index.html
@@ -1530,7 +1530,7 @@
       </section>
 
       <!-- 视听盛宴板块 -->
-      <section id="audio-visual" class="py-20 bg-slate-1000">
+      <section id="media" class="py-20 bg-slate-1000">
         <div class="container mx-auto px-4">
           <h2 class="text-3xl md:text-4xl font-bold mb-12 text-center text-white">视听盛宴</h2>
           <p class="text-lg text-slate-300 max-w-2xl mx-auto">
